Adding twilio test route

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,5 @@
 WEBHOOK_SECRET_TOKEN=RTYbMhh577opMLRb
+TWILIO_ACCOUNT_SID=AC04a9918dd4d48ff8448d6d3fafecaf04
+TWILIO_ACCOUNT_AUTH_TOKEN=f4ab90688836d577b8d31ccce4d68237
+TWILIO_ACCOUNT_MESSAGING_SID=MGb4fc2913b42fdd0897bda84e86833d94
+TWILIO_PHONE_NUMBER=15865018127
