--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ alembic = "^1.4.2"
 asyncpg = "^0.18.3"
 psycopg2-binary = "^2.8.4"
 gunicorn = "^20.0.4"
+twilio = "^6.38.0"
 
 [tool.poetry.dev-dependencies]
 pep8 = "^1.7"
