--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  api:
+  jarvis:
     build:
       context: .
       dockerfile: Dockerfile
@@ -37,7 +37,7 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - frontend
+      - jarvis
 
   postgres:
     image: "postgres:11-alpine"
