--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /frontend
 # install and cache app dependencies
 COPY package.json /frontend/
 RUN yarn install --silent
-RUN yarn install react-scripts@3.0.1 -g --silent
+RUN yarn global add react-scripts@3.0.1
 
 # start app
 CMD ["yarn", "start"]
