--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.8.4"
 gunicorn = "^20.0.4"
 twilio = "^6.38.0"
 python-multipart = "^0.0.5"
+fuzzywuzzy = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 pep8 = "^1.7"
