--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ gunicorn = "^20.0.4"
 twilio = "^6.38.0"
 python-multipart = "^0.0.5"
 fuzzywuzzy = "^0.18.0"
+python-Levenshtein = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pep8 = "^1.7"
